unified main, built with spring-boot