@@ -267,6 +267,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>${springboot.version}</version>
         <configuration>
+          <executable>true</executable>
           <classifier>springboot</classifier>
         </configuration>
         <executions>
@@ -274,6 +275,26 @@
             <id>repackage</id>
             <goals>
               <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <configuration>
+              <!-- create sc exectuable; I didn't find naming/chmod functionality in spring-boot-maven-plugin 2.3.4 -->
+              <target>
+                <copy file="${project.build.directory}/stool-${project.version}-springboot.jar" tofile="${project.build.directory}/sc"/>
+                <chmod file="${project.build.directory}/sc" perm="a+x"/>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
             </goals>
           </execution>
         </executions>
@@ -333,53 +354,6 @@
                 </resource>
               </resources>
             </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>net.oneandone.maven.plugins</groupId>
-        <artifactId>application</artifactId>
-        <version>1.7.0-SNAPSHOT</version>
-        <executions>
-          <execution>
-            <id>stool-client</id>
-            <configuration>
-              <!-- JavaSetup is used as the setup tool *and* as the Jar file for the resulting stool installation. -->
-              <path>$PATH</path>
-              <options>"-Djava.awt.headless=true --illegal-access=deny"</options>
-              <name>sc</name>
-              <main>net.oneandone.stool.cli.command.Main</main>
-              <equal>META-INF/services/java.security.Provider, org/aopalliance/**/*, META-INF/ASL2.0, javax/annotation/**/*, org/bouncycastle/**/*</equal>
-              <remove>META-INF/maven/**/*,
-                module-info.class, META-INF/pominfo.properties, META-INF/wsd.properties, META-INF/DEPENDENCIES, META-INF/LICENSE*, META-INF/NOTICE*,
-                META-INF/license.txt, META-INF/notice.txt, overview.html, META-INF/DUMMY.SF, META-INF/DUMMY.DSA, about.html,
-                readme.txt, changelog.txt, notice.txt, license.txt, licenses/*,
-                META-INF/versions/9/module-info.class,
-                META-INF/BC*.DSA, META-INF/BC*SF
-              </remove>
-              <concat>META-INF/services/com.fasterxml.jackson.core.ObjectCodec,
-                META-INF/services/com.fasterxml.jackson.core.JsonFactory,
-                META-INF/sisu/javax.inject.Named, META-INF/services/org.apache.lucene.codecs.PostingsFormat,
-                META-INF/spring.*</concat>
-              <overwrite>manifest.vm, ValidationMessages.properties, META-INF/services/com.fasterxml.jackson.databind.Module, schema/*-schema.json,
-                META-INF/services/io.fabric8.kubernetes.client.*,
-                META-INF/jandex.idx,
-                META-INF/services/io.fabric8.kubernetes.api.KubernetesResourceMappingProvider,
-                META-INF/versions/9/javax/xml/bind/ModuleUtil.class,
-                javax/xml/bind/**/*,
-                io/sundr/**/*,
-                javax/annotation/Resource$AuthenticationType.class,
-                META-INF/services/javax.servlet.ServletContainerInitializer,
-                META-INF/spring-autoconfigure-metadata.properties,
-                META-INF/web-fragment.xml,
-                META-INF/spring-configuration-metadata.json, META-INF/additional-spring-configuration-metadata.json,
-                META-INF/services/javax.annotation.processing.Processor
-              </overwrite><!-- TODO -->
-              <attach>true</attach>
-            </configuration>
-            <goals>
-              <goal>generate</goal>
-            </goals>
           </execution>
         </executions>
       </plugin>
